update section container

--- a/Junior-Fylo-dark-theme-landing-page/index.html
+++ b/Junior-Fylo-dark-theme-landing-page/index.html
@@ -142,7 +142,7 @@
   <!-- Productive Section -->
   <section id="productive" class="bg-white dark:bg-darkBlue">
     <!-- Productive Container -->
-    <div class="containe flex flex-col items-center mx-auto px-6 pt-24 pb-32 md:flex-row md:space-x-16">
+    <div class="container flex flex-col items-center mx-auto px-6 pt-24 pb-32 md:flex-row md:space-x-16">
       <!-- Image -->
       <div class="md:w-1/2">
         <img src="images/illustration-stay-productive.png" alt="" class="mb-10">
